--- a/src/app/perimeters/perimeters.page.html
+++ b/src/app/perimeters/perimeters.page.html
@@ -18,8 +18,8 @@
   </div>
 
   <div id="container">
-    <div id="carregando" *ngIf="!perimeters">
-      {{carregando}}
+    <div class="carregando" *ngIf="!perimeters">
+      <div class="carregandoTitle">{{carregando}}</div>
     </div>
     <div *ngIf="perimeters">
 
