--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,3 @@
-body {
-  font-family: "CorporateACon-Reg" !important;
-  font-size: 16px;
-}
-
 ion-menu ion-content {
   --background: var(--ion-item-background, var(--ion-background-color, #fff));
 }
@@ -19,7 +14,7 @@ ion-menu.md ion-list {
 }
 
 ion-menu.md ion-note {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 ion-menu.md ion-list-header,
@@ -80,7 +75,7 @@ ion-menu.ios ion-list {
 
 ion-menu.ios ion-note {
   line-height: 24px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 ion-menu.ios ion-item {
@@ -130,4 +125,14 @@ ion-item.selected {
 ion-item-divider {
   margin-top: 5px;
   min-height: 2px !important;
+}
+
+.companyData {
+
+  ion-note {
+    width: 100%;
+    display: flexbox;
+    align-items: flex-start;
+  }
+
 }
