--- a/src/app/myOffers/myOffers.page.html
+++ b/src/app/myOffers/myOffers.page.html
@@ -3,17 +3,89 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Minhas Ofertas</ion-title>
+    <ion-title size="large">
+      Minhas Ofertas
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="normal">Cadastro de Ofertas</ion-title>
-    </ion-toolbar>
-  </ion-header>
+ 
+  <div id="addBox" (click)="abrir()">
+    <ion-icon name="add-outline"></ion-icon>
+    <ion-icon name="rocket-outline"></ion-icon>
+  </div>
 
   <div id="container">
+
+    <div class="carregando" *ngIf="!myOffers">
+      <div class="carregandoTitle">{{carregando}}</div>
+    </div>
+
+
+    <div *ngIf="myOffers">
+
+      <ion-card *ngFor="let myoffer of myOffers">
+        <ion-card-content>
+
+
+          <div *ngIf="myoffer.veiculoFotos.length > 0">
+            <swiper [config]="config" (slideChange)="onSlideChange()">
+              <ng-template swiperSlide *ngFor="let foto of myoffer.veiculoFotos ">
+                <img src="{{ foto.base64 }}" width="100" height="100" />
+              </ng-template>
+            </swiper>
+          </div>
+
+          <div *ngIf="myoffer.veiculoFotos.length == 0">
+            <swiper [config]="config" (slideChange)="onSlideChange()">
+              <ng-template swiperSlide *ngFor="let foto of fotoNaoDisponivel">
+                <img src="{{ foto.base64 }}" width="100" height="100" />
+              </ng-template>
+            </swiper>
+          </div>
+
+          <ion-grid class="dadosGrid" (click)="abrir(myOffer)">
+            <ion-row aria-colspan="4">
+              <ion-col class="cell-class">
+                <ion-label><b>{{ (!!myoffer.veiculo.preco) ? (myoffer.veiculo.preco*1).toLocaleString('pt-BR', {minimumFractionDigits: 2 , style: 'currency', currency: 'BRL'}) : 0 }} &nbsp;</b></ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col class="cell-class">
+                <ion-label class="semQuebra">{{ myoffer.veiculo.placa }} &nbsp;</ion-label>
+              </ion-col>
+              <ion-col class="cell-class">
+                <ion-label class="semQuebra">{{ myoffer.veiculo.marcaDescricao }} &nbsp;</ion-label>
+              </ion-col>
+              <ion-col class="cell-class">
+                <ion-label class="semQuebra">{{ myoffer.veiculo.anoModeloDescricao }} &nbsp;</ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row aria-colspan="4">
+              <ion-col class="cell-class">
+                <ion-label>{{ myoffer.veiculo.modeloDescricao }} &nbsp;</ion-label>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          Data de inclusão da oferta: {{myoffer.createdAtISO | date: 'dd/MM/yyyy HH:mm:ss'}}
+
+          <!-- <div id="minusBox" slot="end" (click)="apagar()">
+            <ion-icon name="remove-outline"></ion-icon>
+            <ion-icon name="rocket-outline"></ion-icon>
+          </div> -->
+
+
+        </ion-card-content>
+
+      </ion-card>
+
+    </div>
   </div>
+
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="100" pullMax="200">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  
 </ion-content>
+
