--- a/src/app/offers/offers.page.html
+++ b/src/app/offers/offers.page.html
@@ -17,13 +17,15 @@
           <ion-icon color="primary" name="filter-outline"></ion-icon>
         </ion-col>
       </ion-row>
-      </ion-grid>
-   </div>
+    </ion-grid>
+  </div>
 
   <div id="container">
-    <div id="carregando" *ngIf="!offers">
-      {{carregando}}
+
+    <div class="carregando" *ngIf="!offers">
+      <div class="carregandoTitle">{{carregando}}</div>
     </div>
+
     <div *ngIf="offers">
       <ion-card *ngFor="let offer of offers">
         <ion-card-content>
@@ -39,29 +41,12 @@
           <ion-grid>
             <ion-row>
               <ion-col class="cell-class">
-                <h2><b>{{ offer.veiculo.preco }}</b></h2>
+                <h1>
+                  <b>{{ (!!offer.veiculo.preco) ? (offer.veiculo.preco*1).toLocaleString('pt-BR', {minimumFractionDigits: 2 , style: 'currency', currency: 'BRL'}) : 0 }}</b>
+                </h1>
               </ion-col>
               <ion-col class="cell-class">
                 <ion-label>{{ offer.veiculo.marcaDescricao }}</ion-label>
-              </ion-col>
-              <ion-col class="cell-class">
-                <ion-label>{{ offer.veiculo.referenciaDescricao }}</ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row aria-colspan="2">
-              <ion-col class="cell-class">
-                <ion-label>{{ offer.veiculo.modeloDescricao }}</ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="cell-class">
-                <ion-label>{{ offer.veiculo.anoFabricacao  }}/{{ offer.veiculo.anoModelo }}</ion-label>
-              </ion-col>
-              <ion-col class="cell-class">
-                <ion-label>KMS {{ offer.veiculo.kms }}</ion-label>
-              </ion-col>
-              <ion-col class="cell-class">
-                <ion-label>Cor: {{ offer.veiculo.cor }}</ion-label>
               </ion-col>
             </ion-row>
             <ion-row>
@@ -69,7 +54,23 @@
                 <ion-label>Final Placa: {{ offer.veiculo.placa.substring(offer.veiculo.placa.length-1,offer.veiculo.placa.length) }}</ion-label>
               </ion-col>
               <ion-col class="cell-class">
-                <ion-label>Fipe {{ offer.veiculo.coddigoFipe }} {{ offer.veiculo.valorFipe }}</ion-label>
+                <ion-label>{{ offer.veiculo.anoModeloDescricao }}</ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col class="cell-class">
+                <ion-label>KMS {{ offer.veiculo.kms }}</ion-label>
+              </ion-col>
+              <ion-col class="cell-class">
+                <ion-label>Cor: {{ offer.veiculo.cor }}</ion-label>
+              </ion-col>
+            </ion-row>
+            <ion-row aria-colspan="2">
+              <ion-col class="cell-class">
+                <ion-label>Fipe:</ion-label>
+                <ion-label>{{ offer.veiculo.codigoFipe }}</ion-label> &nbsp;
+                <ion-label>{{ offer.veiculo.referenciaDescricao }}</ion-label>&nbsp;
+                <ion-label>{{ offer.veiculo.valorFipe }}</ion-label>
               </ion-col>
             </ion-row>
             <ion-row aria-colspan="3">
@@ -90,7 +91,9 @@
 
     </div>
   </div>
-  <div  id="aviso"><ion-label color="danger">* cobrança de tarifa para ver os dados de compra</ion-label></div>
+  <div id="aviso">
+    <ion-label color="danger">* cobrança de tarifa para ver os dados de compra</ion-label>
+  </div>
 
   <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" pullFactor="0.5" pullMin="200" pullMax="300">
     <ion-refresher-content></ion-refresher-content>
